update WheelTimer